# eovim

./: .clang-format  .gitignore  .travis.yml  AUTHORS  AppImageBuilder.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: issue_template.md
.github/workflows/: ci.yml  coverity.yml
cmake/Modules/: Eolian.cmake  FindEfl.cmake  FindMsgPack.cmake  compiler_warnings.cmake  cpack_config.cmake  git_commit.cmake  plugin.cmake  version.h.in
data/desktop/: eovim.desktop
data/man/: CMakeLists.txt  eovim.1.in
data/themes/: background.edc  cmdline.edc  completion.edc  cursor.edc  default.edc  tab.edc
data/vim/: runtime.vim
data/vim/doc/: eovim.txt  tags
include/: Eovim.h
include/contrib/: contrib.h
include/eovim/: config.h  gui.h  keymap.h  log.h  main.h  mode.h  msgpack_helper.h  nvim.h  nvim_api.h  nvim_completion.h  nvim_event.h  nvim_helper.h  nvim_request.h  options.h  prefs.h  termview.h  types.h
plugins/: CMakeLists.txt  README.md
plugins/imageviewer/: plugin.c  plugin.json
plugins/lib/: eovim.c  gen_helper.py  helper.c.j2  helper.h.j2
plugins/sizing/: plugin.c  plugin.json
scripts/: ci-build.sh  format.sh  get-msgpack.sh  get-test-data.sh  make-appimage.sh  make-appimage.sh.in  setup.py
src/: api.c  config.c  contrib.c  gui.c  keymap.c  main.c  mode.c  nvim.c  nvim_api.c  nvim_attach.c  nvim_completion.c  nvim_event.c  nvim_helper.c  nvim_request.c  options.c  pack.c  plugin.c  prefs.c  request.c  tab.c  tabpage.c  termcolors.x  termview.c  test.c  types.c  window.c
src/api/: api-0.2.1.yml  dump-nvim-api.sh  gen-api-implementation.py  nvim_api.c.j2  nvim_api.h.j2
src/eo/: envim_termview.eo
src/event/: cmdline.c  eovim.c  event.h  linegrid.c  mode.c  option_set.c  popupmenu.c  tabline.c  util.c
src/gui/: cmdline.c  completion.c  cursor.c  grid.c  gui.c  gui_private.h  keyin.c  popupmenu.c  styles.c  termview.c  wildmenu.c
src/include/: Envim.h  Eovim.h
src/include/contrib/: contrib.h
src/include/envim/: config.h  gui.h  keymap.h  log.h  main.h  mode.h  nvim.h  nvim_api.h  nvim_event.h  request.h  termview.h  types.h
src/include/eovim/: config.h  gui.h  keymap.h  log.h  main.h  mode.h  msgpack_helper.h  nvim.h  nvim_api.h  nvim_event.h  nvim_helper.h  options.h  plugin.h  prefs.h  termview.h  test.h  types.h
tests/: CMakeLists.txt  README.md  tests.txt.in
tests/env/: default.cfg  init.vim
